--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server/server.js",
   "scripts": {
     "start": "node server/server.js",
-    "dev": "nodemon server/server.js"
+    "dev": "nodemon server/server.js",
+    "deploy": "gh-pages -d ."
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -14,6 +15,8 @@
     "nodemailer": "^6.9.7"
   },
   "devDependencies": {
+    "gh-pages": "^6.3.0",
     "nodemon": "^3.1.9"
-  }
+  },
+  "homepage": "https://yourusername.github.io/ProfitSharing-APP"
 }
