--- a/package.json
+++ b/package.json
@@ -18,5 +18,5 @@
     "gh-pages": "^6.3.0",
     "nodemon": "^3.1.9"
   },
-  "homepage": "https://yourusername.github.io/ProfitSharing-APP"
+  "homepage": "https://jjfcode.github.io/ProfitSharing-APP"
 }
