--- a/manifest.json
+++ b/manifest.json
@@ -1,23 +1,24 @@
 {
   "name": "Profit Sharing Calculator",
   "short_name": "ProfitCalc",
-  "start_url": "/index.html",
+  "start_url": "/ProfitSharing-APP/",
+  "scope": "/ProfitSharing-APP/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#007bff",
   "icons": [
     {
-      "src": "assets/icons/icon-72x72.png",
+      "src": "/ProfitSharing-APP/assets/icons/icon-72x72.png",
       "sizes": "72x72",
       "type": "image/png"
     },
     {
-      "src": "assets/icons/icon-192x192.png",
+      "src": "/ProfitSharing-APP/assets/icons/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "assets/icons/icon-512x512.png",
+      "src": "/ProfitSharing-APP/assets/icons/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
